--- a/style.css
+++ b/style.css
@@ -1,8 +1,32 @@
-﻿body {
+﻿* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
     background-image: url('images/obrazek1.jpg');
     background-size: 100%;
     /*background-attachment: fixed;
     background-repeat: repeat-x;
     background-color:#363636;
     */
+}
+
+#container {
+    width: 100%;
+}
+
+/* TOP CONTAINER PART */
+
+#top_container_part {
+    position: relative;
+    background-color: grey;
+    width: 100%;
+    height: 100px;
+}
+
+img.logo {
+    position: absolute;
+    left: 20px;
+    top: 20px;
 }
