Change elements background color on hover

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ img.logo {
 }
 
 #major_top_menu li a:hover {
-    background-color: grey;
+    background-color: darkgrey;
     color:deeppink;
 }
 
