--- a/style.css
+++ b/style.css
@@ -86,3 +86,38 @@ span.link {
     display: inline-block;
     margin-top: 5px;
 }
+
+/* INNER MENU */
+#inner_menu {
+    background-color: darkgrey;
+    height: 50px;
+}
+
+#inner_menu li {
+    list-style-type: none;
+    float: left;
+}
+
+#inner_menu li a {
+    border-bottom: none;
+    color: #111111;
+    font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    font-style: italic;
+}
+
+#inner_menu li span.link2 {
+    display: block;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+#inner_menu #inner_menu_level1 {
+    margin-left: 80px;
+}
+
+#inner_menu li a:hover {
+    color: deeppink;
+}
