--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a:hover {
 
 #top_container_part {
     position: relative;
-    background-color: grey;
+    background-color: gray;
     width: 100%;
     height: 100px;
 }
@@ -78,7 +78,7 @@ img.logo {
 }
 
 #major_top_menu li a:hover {
-    background-color: darkgrey;
+    background-color: darkgray;
     color:deeppink;
 }
 
@@ -89,7 +89,7 @@ span.link {
 
 /* INNER MENU */
 #inner_menu {
-    background-color: darkgrey;
+    background-color: darkgray;
     height: 50px;
 }
 
@@ -107,6 +107,10 @@ span.link {
     font-style: italic;
 }
 
+#inner_menu li a:hover {
+    color: deeppink;
+}
+
 #inner_menu li span.link2 {
     display: block;
     margin-top: 20px;
@@ -118,6 +122,54 @@ span.link {
     margin-left: 80px;
 }
 
-#inner_menu li a:hover {
-    color: deeppink;
+/* Drop-down menu */
+#inner_menu_level1 li .inner_menu_level2 {
+    display: none;
+    position: absolute;
+    background-color: darkgray;
+    border-width: 1px 3px 3px 3px;
+    border-style: solid;
+    border-color: white;
+    border-top-color: darkgray;
+    top: 3em;
+    left: 0em;
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+}
+
+#inner_menu_level1 li:hover .inner_menu_level2 {
+    display: block;
+    width: 180px;
+}
+
+#inner_menu_level1 li .inner_menu_level2 li {
+    width: 140px;
+    text-align: left;
+    margin-left: 20px;
+    border-top: 1px solid white;
+}
+
+#inner_menu_level1 > li {
+    position: relative;
+    height: 51px;
+}
+
+#inner_menu_level1 li .inner_menu_level2 li a {
+    display: block;
+    width: 140px;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+    /*font-family: Verdana, Geneva, Tahoma, sans-serif;*/
+    font-style: normal;
+}
+
+#inner_menu_level1 li .inner_menu_level2 li a:hover {
+    background-color:silver;
+    padding-left: 10px;
+    margin-left: -10px;
+    padding-right: 10px;
+}
+
+#inner_menu_level1 li .inner_menu_level2 li.first_element_menu {
+    margin-top: 5px;
 }
