--- a/style.css
+++ b/style.css
@@ -179,6 +179,8 @@ span.link {
 
 #content {
     width: 60%;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
 }
 
 #top_content_part {
@@ -198,18 +200,6 @@ span.link {
     height: 30px;
     border-top-style: solid;
     border-width: thick;
-}
-
-#content .side_text {
-    background-color: mediumseagreen;
-    float: right;
-    text-align: left;
-    width: 20%;
-    margin: 10px 20px;
-    font-size: 10px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border: 1px dashed black;
-    padding: 20px 15px;
 }
 
 #text {
@@ -248,4 +238,32 @@ p {
 
 #content li {
     margin-left: 5px;
+}
+
+#content .side_text {
+    background-color: mediumseagreen;
+    float: right;
+    text-align: left;
+    width: 20%;
+    margin: 10px 20px;
+    font-size: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border: 1px dashed black;
+    padding: 20px 15px;
+}
+
+#footer {
+    background-color: gray;
+    width: 60%;
+    height: 65px;
+    padding-top: 15px;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+}
+
+#footer p {
+    margin-bottom: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 11px;
+    color: ghostwhite
 }
