--- a/style.css
+++ b/style.css
@@ -214,6 +214,14 @@ span.link {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+form {
+    text-align: justify;
+    padding: 10px 50px;
+    line-height: 140%;
+    font-size: 12px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 h1 {
     font-size: 24px;
     text-align: center;
